--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -582,6 +582,12 @@ button:active {
         background-color: rgb(249 250 251) !important; /* Ensure background color */
     }
 
+    /* Dark mode background for modal footers on mobile */
+    .dark .modal-mobile-full .bg-gray-50:last-child,
+    .dark .modal-mobile-full .border-t:last-child {
+        background-color: rgb(17 24 39) !important; /* dark:bg-gray-900 */
+    }
+
     /* Smaller file preview items on mobile */
     #modal-file-preview-list .w-20 {
         width: 4rem !important;
@@ -740,4 +746,14 @@ button:active {
         max-height: 5rem !important;
         overflow: hidden;
     }
+}
+
+/* Hide scrollbar for post attachment containers */
+[data-attachment-container]::-webkit-scrollbar {
+    display: none;
+}
+
+[data-attachment-container] {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
